--- a/src/app/components/actor-search/actor-search.component.html
+++ b/src/app/components/actor-search/actor-search.component.html
@@ -11,8 +11,8 @@
   <h2>Search Results</h2>
   <div class="actors-grid">
     <ng-container *ngFor="let actor of searchResults; let i = index">
-      <div class="actor-card" *ngIf="i < 9">
-        <img [src]="actor.profile_path ? 'https://image.tmdb.org/t/p/w185' + actor.profile_path : 'assets/default-actor-picture.png'" [alt]="actor.name + ' profile picture'">
+      <div class="actor-card" *ngIf="i < 9" (click)="onActorSelected(actor)">
+        <img *ngIf="actor.profile_path" [src]="'https://image.tmdb.org/t/p/w185' + actor.profile_path" [alt]="actor.name + ' profile picture'">
         <svg class="heart-icon" width="20" height="20" viewBox="0 0 24 24" (click)="toggleFavorite(actor)" [ngClass]="{'filled-heart': isFavorite(actor)}">
           <path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
         </svg>
