--- a/src/app/components/favorite-actors/favorite-actors.component.html
+++ b/src/app/components/favorite-actors/favorite-actors.component.html
@@ -1,5 +1,4 @@
-<p>favorite-actors works!</p>
-<p class="info-text">Actor search works!</p>
+<p class="info-text">Favorite actors works!</p>
 
 
 <div *ngIf="favoriteActors.length > 0">
@@ -8,7 +7,7 @@
   
   <div class="actors-grid">
     <ng-container *ngFor="let actor of favoriteActors; let i = index">
-      <div class="actor-card" *ngIf="i < 9">
+      <div class="actor-card" *ngIf="i < 9" (click)="onActorSelected(actor)">
         <img [src]="actor.profile_path ? 'https://image.tmdb.org/t/p/w185' + actor.profile_path : 'assets/default-actor-picture.png'" [alt]="actor.name + ' profile picture'">
         <h3>{{ actor.name }}</h3>
         <div *ngIf="actor.known_for.length > 0" class="known-for">
